# animals-main

./: main.py  pyproject.toml
app/data/: animals.json  animals.py  cured_animals.json  list_files.py  open_files.py  reviews.json  reviews.py
app/forms/: animal.py
app/keyboards/: animals.py  start.py
app/routers/: animals.py  reviews.py  start.py
